welcome.lessons.welcome.methods.slug.SlugSnail.scala.error
SlugSnail:15: error: ':' expected but ')' found.
def isFacingTrail(c):Boolean = {
                   ^SlugSnail:33: error: identifier expected but '}' found.
}
^